<resources>
    <string name="app_name">PeDeMaP</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>
    <string name="title_log">Log</string>
    <string name="title_preferences">Preferences</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_position_text">My current position</string>
    <string name="log_level_info">INFO</string>
    <string name="default_timestamp">19.10.2020 13:19:58</string>
    <string name="log_category_gps">GPS</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</string>
    <string name="log_level_debug">DEBUG</string>
    <string name="log_level_unknown">UNKNOWN</string>
    <string name="log_level_warn">WARNING</string>
    <string name="log_level_error">ERROR</string>
    <string name="restart_location_service">Restart Location Service</string>
    <string name="hint_location_interval">Interval</string>
    <string name="preferences_header_location">Location</string>
    <string name="foreground_message">Retrieving Location updates in the background...</string>
    <string name="preferences_header_density">Density calculation</string>
    <string-array name="algorithms">
        <item>SimpleDensityCalculationStrategy</item>
        <item>RadiusNormalDistributedDensityCalculationStrategy</item>
    </string-array>
    <string name="title_activity_privacy">About</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>