<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.peopledensitymeasurementprototype.fragment.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_log"
        android:name="com.example.peopledensitymeasurementprototype.fragment.LogFragment"
        android:label="@string/title_log"
        tools:layout="@layout/fragment_log" />

    <fragment
        android:id="@+id/navigation_preferences"
        android:name="com.example.peopledensitymeasurementprototype.fragment.PreferencesFragment"
        android:label="@string/title_preferences"
        tools:layout="@layout/fragment_preferences" />
</navigation>